Исправления для macOS(README)