@@ -1,4 +1,9 @@
 # Urban-Modelling
 Program for Modelling Urban Growth with Cellular Automata  
-Ссылка на исполняемый файл:https://www.dropbox.com/s/e3fqkb53odz1wy9/GeoAut.jar?dl=0  
+Ссылка на исполняемый файл:https://www.dropbox.com/scl/fi/j1dp7eyqmz0vrlr772vla/GeoAut.jar?rlkey=dwvu6gkr091x75p55b0q6flao&st=8jkqzyrq&dl=0
 Ссылка на инструкцию: https://docs.google.com/document/d/1Z5rijVmS_UuBY4LoyoQ624PSEzhtNW2LQYE52AdDK0U/edit?usp=sharing
+
+Дополнение для macOS:
+1)Скачайте JavaFX:https://openjfx.io/  
+2)Используйте brew install ffmpeg  
+3)Запускайте через:  java --module-path /path/to/javafx/lib --add-modules javafx.controls,javafx.fxml -jar GeoAut.jar
